# hydra_demo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.dvc/: config
hydra_basics/: data.dvc
hydra_basics/config/: main.yaml
hydra_basics/src/: print_config.py  segment.py
hydra_basics/tests/: test_process_data.py
hydra_group/config/: main.yaml
hydra_group/config/process/: process_1.yaml  process_2.yaml  process_3.yaml  process_4.yaml
hydra_group/src/: main.py  process_data.py
without_config/: README.md  data.dvc
without_config/config/: main.yaml
without_config/src/: main.py  process_data.py  segment.py
without_config/tests/: test_process_data.py
